# feature_analysis

./: .coverage  .gitlab-ci.yml  .pypirc  LICENSE  README.md  Requirements - Copy.txt  Requirements.txt  report.xml  requirements.txt  setup.cfg  tox.ini
datasets/: Untitled.ipynb  binned_date_df.csv  contocatDf.csv  filledDf.csv  fish_test.csv  labelledDf.csv  multi_analysis.csv  multi_stable.csv  readme.ipynb  reg_analysis.csv  reg_stable.csv  report.xlsx  weatherAUS.csv
src/binary_class/: Untitled.ipynb  feature_analysis.py
src/feature_analysis/: __init__.py  feature_analysis.py  feature_types.py
src/feature_analysis/binary_class/: Untitled.ipynb  feature_analysis.py  feature_types.py
src/feature_analysis/binary_class/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/feature_analysis/binary_classification/: feature_analysis.py
src/feature_analysis/multi_classification/: __init__.py  multi_analysis.py
src/feature_analysis/regression/: __init__.py  pathway.py  reg_analysis.py
src/feature_analysis_karsh.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/metrics_test/: feature_types.py  final.py  metric_over_time.py  performance.py  stability.py  to_excel.py  trend.py
src/metrics_test_karsh.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/datasets/: report.xlsx
tests/unit_tests/: __init__.py  conftest.py  test_feature_analysis.py  test_feature_types.py  test_multi_classification.py  test_reg_analysis.py
