[metadata]
name = metrics-test-karsh
version = 0.0.11
author = Utkarsh
author_email = utkarshboom77@gmail.com
description = A test package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/picaindahouse/metrics_test
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src